fix enum convention to support rails version 8.xx or more

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,8 +1,8 @@
 <h1>Please click the link for authentication</h1>
-<%# Have a link for the user to go to the csv file uploading %>
-<%# Redirect user to the info page for auth %>
 <p>
-  <%= link_to "Go to Info Page", info_path %>
+  <%= link_to "Go to Bulk Charges", bulkcharges_path %>
 </p>
+
+
 
 
