--- a/app/views/bulkcharges/index.html.erb
+++ b/app/views/bulkcharges/index.html.erb
@@ -1,11 +1,13 @@
-<h1>Bulk Charges</h1>
+<h1>Bulk Charges total CSV files </h1>
+<p>
+  <%= link_to "New Bulk Charge", new_bulkcharge_path, class: "button" %>
+</p>
 <table border="1">
   <thead>
     <tr>
       <th>ID</th>
       <th>Status</th>
       <th>Created At</th>
-      <th>Actions</th>
     </tr>
   </thead>
   <tbody>
@@ -14,9 +16,6 @@
         <td><%= bulk_charge.id %></td>
         <td><%= bulk_charge.status %></td>
         <td><%= bulk_charge.created_at.strftime("%Y-%m-%d %H:%M:%S") %></td>
-        <td>
-          <%= link_to "Show", bulk_charge_path(bulk_charge) %>
-        </td>
       </tr>
     <% end %>
   </tbody>
