--- a/app/views/bulkcharges/show.html.erb
+++ b/app/views/bulkcharges/show.html.erb
@@ -13,3 +13,8 @@
     <td><%= @bulk_charge.created_at.strftime("%Y-%m-%d %H:%M:%S") %></td>
   </tr>
 </table>
+
+<%# add the link to go back to the bulk index page %>
+<p>
+  <%= link_to "Back to Bulk Charges", bulkcharges_path %>
+</p>
