--- a/app/views/bulkcharges/index.html.erb
+++ b/app/views/bulkcharges/index.html.erb
@@ -16,7 +16,7 @@
     <tr>
       <td><%= bulk_charge.id %></td>
       <td><%= bulk_charge.status %></td>
-      <td><%= bulk_charge.created_at.strftime("%Y-%m-%d %H:%M:%S") %></td>
+      <td><%= bulk_charge.created_at.in_time_zone("Bangkok").strftime("%Y-%m-%d %H:%M:%S") %></td>
       <td>
         <%= link_to "Preview CSV", csv_preview_bulkcharge_path(bulk_charge) %>
       </td>
