--- a/app/views/bulkcharges/show.html.erb
+++ b/app/views/bulkcharges/show.html.erb
@@ -10,7 +10,7 @@
   </tr>
   <tr>
     <th>Created At</th>
-    <td><%= @bulk_charge.created_at.strftime("%Y-%m-%d %H:%M:%S") %></td>
+    <td><%= @bulk_charge.created_at.in_time_zone("Bangkok").strftime("%Y-%m-%d %H:%M:%S") %></td>
   </tr>
 </table>
 
