--- a/app/views/bulkcharges/index.html.erb
+++ b/app/views/bulkcharges/index.html.erb
@@ -1,4 +1,6 @@
 <h1>Bulk Charges total CSV files </h1>
+
+
 <p>
   <%= link_to "New Bulk Charge", new_bulkcharge_path, class: "button" %>
 </p>
@@ -14,17 +16,23 @@
   </thead>
   <tbody>
    <tbody>
+    
   <% @bulk_charges.each do |bulk_charge| %>
-    <tr>
-      <td><%= bulk_charge.id %></td>
-      <td><%= bulk_charge.status %></td>
-      <td><%= bulk_charge.created_at.in_time_zone("Bangkok").strftime("%Y-%m-%d %H:%M:%S") %></td>
-      <td>
-        <%= link_to "Preview CSV", csv_preview_bulkcharge_path(bulk_charge) %>
-      </td>
-      <td>
+  <tr>
+    <td><%= bulk_charge.id %></td>
+    <td><%= bulk_charge.status %></td>
+    <td><%= bulk_charge.created_at.in_time_zone("Bangkok").strftime("%Y-%m-%d %H:%M:%S") %></td>
+    <td>
+      <%= link_to "Preview CSV", csv_preview_bulkcharge_path(bulk_charge) %>
+    </td>
+    <td>
+      <% if bulk_charge.csv_file.attached? %>
         <%= link_to "Download CSV", rails_blob_path(bulk_charge.csv_file, disposition: "attachment") %>
-    </tr>
+      <% else %>
+        No file attached
+      <% end %>
+    </td>
+  </tr>
   <% end %>
 </tbody>
   </tbody>
